snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1.pom.sha1
c61e5bc768246ac7e71634f3d35fa6a91e8880e3